Fix hidden/visible utility classes

--- a/packages/starbook/style/util.css
+++ b/packages/starbook/style/util.css
@@ -11,16 +11,16 @@
 }
 
 .hidden {
-  visibility: hidden;
+  display: none;
 }
-.visible {
-  visibility: visible;
+.flex {
+  display: flex;
 }
 @media (min-width: 50rem) {
   .md\:hidden {
-    visibility: hidden;
+    display: none;
   }
-  .md\:visible {
-    visibility: visible;
+  .md\:flex {
+    display: flex;
   }
 }
